added title and improved lauch message

--- a/timeline/templates/timeline/card_list_view.html
+++ b/timeline/templates/timeline/card_list_view.html
@@ -14,9 +14,10 @@
 <body>
     <!-- partial:index.partial.html -->
     <div class="title">
-        <h2>Responsive Vertical Timeline</h2>
-        <p><a href="https://htmlcodex.com/css-timeline">More timeline designs</a></p>
+        <h2>Timeline</h2>
+        <p><h6>Track record of my minor and major professional achievements.</h6></p>
     </div>
+    <hr>
     <div class="timeline">
         <div class="container">
             <div class="row">
@@ -48,8 +49,8 @@
                         <div class="timeline-launch">
                             <div class="timeline-box">
                                 <div class="timeline-text">
-                                    <h3>Launched our company on 01 Jan 2019</h3>
-                                    <p>Lorem ipsum dolor sit amet</p>
+                                    <h3>Launched my timeline</h3>
+                                    <p></p>
                                 </div>
                             </div>
                         </div>
