added 'title' and 'date' filter in card snippets

--- a/timeline/templates/timeline/snippets/left_card.html
+++ b/timeline/templates/timeline/snippets/left_card.html
@@ -1,7 +1,7 @@
 <div class="row timeline-left">
     <div class="col-md-6 d-md-none d-block">
       <p class="timeline-date">
-        {{date}}
+        {{date|date:"F"}}
       </p>
     </div>
     <div class="col-md-6">
@@ -10,7 +10,7 @@
           <i class="fa fa-business-time"></i>
         </div>
         <div class="timeline-text">
-          <h3>{{heading}}</h3>
+          <h3>{{heading|title }}</h3>
           <p>{{body}}</p>
         </div>
         <div class="timeline-icon d-md-block d-none">
@@ -20,7 +20,7 @@
     </div>
     <div class="col-md-6 d-md-block d-none">
       <p class="timeline-date">
-        {{date}}
+        {{date|date:"F"}}
       </p>
     </div>
   </div>
