--- a/timeline/templates/timeline/snippets/right_card.html
+++ b/timeline/templates/timeline/snippets/right_card.html
@@ -1,7 +1,7 @@
 <div class="row timeline-right">
     <div class="col-md-6">
         <p class="timeline-date">
-            {{date}}
+            {{date|date:"F  "}}
         </p>
     </div>
     <div class="col-md-6">
@@ -10,7 +10,7 @@
                 <i class="fa fa-gift"></i>
             </div>
             <div class="timeline-text">
-                <h3>{{heading}}</h3>
+                <h3>{{heading|title }}</h3>
                 <p>{{body}}</p>
             </div>
         </div>
