--- a/timeline/templates/timeline/card_list_view.html
+++ b/timeline/templates/timeline/card_list_view.html
@@ -5,6 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Aman Goyal - Timeline</title>
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <link rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css'>
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css'>
     <link rel="stylesheet" href="{% static 'timeline/style.css' %}">
