centered text in card

--- a/timeline/templates/timeline/snippets/right_card.html
+++ b/timeline/templates/timeline/snippets/right_card.html
@@ -10,8 +10,10 @@
                 <i class="fa fa-gift"></i>
             </div>
             <div class="timeline-text">
+                <center>
                 <h3>{{heading|title }}</h3>
                 <p>{{body}}</p>
+                </center>
             </div>
         </div>
     </div>
