--- a/timeline/templates/timeline/snippets/left_card.html
+++ b/timeline/templates/timeline/snippets/left_card.html
@@ -10,8 +10,10 @@
           <i class="fa fa-business-time"></i>
         </div>
         <div class="timeline-text">
+          <center>
           <h3>{{heading|title }}</h3>
           <p>{{body}}</p>
+          </center>
         </div>
         <div class="timeline-icon d-md-block d-none">
           <i class="fa fa-business-time"></i>
