added my favicon, webmanifest

--- a/landingpage/templates/landingpage/index.html
+++ b/landingpage/templates/landingpage/index.html
@@ -14,8 +14,10 @@
   <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
 
   <!-- Favicons -->
-  <link href="{% static 'landingpage/img/favicon.png' %}" rel="icon">
-  <link href="{% static 'landingpage/img/apple-touch-icon.png' %}" rel="apple-touch-icon">
+  <link rel="apple-touch-icon" sizes="180x180" href="{% static 'landingpage/favicon/apple-touch-icon.png' %}">
+  <link rel="icon" type="image/png" sizes="32x32" href="{% static 'landingpage/favicon/favicon-32x32.png' %}">
+  <link rel="icon" type="image/png" sizes="16x16" href="{% static 'landingpage/favicon/favicon-16x16.png' %}">
+  <link rel="manifest" href="{% static 'landingpage/favicon/site.webmanifest' %}">
 
   <!-- Google Fonts -->
   <link
