added hashnode icon on left panel

--- a/landingpage/templates/landingpage/index.html
+++ b/landingpage/templates/landingpage/index.html
@@ -62,8 +62,9 @@
           <!-- <a href="{% url 'timeline-home' %}" class="google-plus"><i class="bx bxl-skype"></i></a> -->
           <a href="https://www.linkedin.com/in/ln-amangoyal/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
           <a href="https://dev.to/goyalaman" class="devto"><i class="bx bxl-dev-to"></i></a>
-          <a href="https://blog.amangoyal.ml/" class="devto"><iconify-icon data-icon="cib-hashnode"></iconify-icon></i></a>
-          
+          <a href="https://blog.amangoyal.ml/" class="devto">
+            <iconify-icon data-icon="cib-hashnode"></iconify-icon></i>
+          </a>
         </div>
       </div>
 
