Improved written content

--- a/landingpage/templates/landingpage/index.html
+++ b/landingpage/templates/landingpage/index.html
@@ -102,10 +102,7 @@
           <p>Enthusiastic Software Developer eager to
             contribute to team success through hard work,
             attention to detail and excellent organizational
-            skills. Proven skills in leadership. I love reading,
-            creating new stuff every day. Curiosity drives me.
-            Always up for new challenges. I am quick to learn
-            and willing to adapt to any job.
+            skills. Proven skills in leadership. 
           </p>
         </div>
 
@@ -137,10 +134,7 @@
                 </ul>
               </div>
             </div>
-            <p>Enthusiastic Software Developer eager to
-              contribute to team success through hard work,
-              attention to detail and excellent organizational
-              skills. Proven skills in leadership. I love reading,
+            <p>I love reading,
               creating new stuff every day. Curiosity drives me.
               Always up for new challenges. I am quick to learn
               and willing to adapt to any job.
@@ -157,9 +151,7 @@
 
         <div class="section-title">
           <h2>Facts</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
-            consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit
-            in iste officiis commodi quidem hic quas.</p>
+          <p>Did 9 Projects counting upto 412+ hours of skill-fully invested time. Accouting for  160+ commits on github and 2 Blog Post ( Available on Desv.to and blog.amangoyal.ml ).</p>
         </div>
 
         <div class="row no-gutters">
