--- a/landingpage/templates/landingpage/index.html
+++ b/landingpage/templates/landingpage/index.html
@@ -188,7 +188,7 @@
               <i class="icofont-clock-time"></i>
               <!-- <span data-toggle="counter-up">412&nbsp+</span> -->
               <span data-toggle="counter-up">412</span>
-              <p><strong>Hours</strong> intvested in 2020 </p>
+              <p><strong>Hours</strong> invested in 2020 </p>
             </div>
           </div>
 
