add my image to hero section and profile

--- a/landingpage/templates/landingpage/index.html
+++ b/landingpage/templates/landingpage/index.html
@@ -86,7 +86,7 @@
 
   <!-- ======= Hero Section ======= -->
   <main id="main">
-    <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
+    <section id="hero" class="d-flex flex-column justify-content-center align-items-center" style="background-image: url('{% static 'landingpage/img/hero-bg-aman-trimmed.jpg' %}') ;">
       <div class="hero-container" data-aos="fade-in">
         <h1>Aman Goyal</h1>
         <p>I'm <span class="typed" data-typed-items="Developer, Developer, Engineer, Student"></span></p>
@@ -108,7 +108,7 @@
 
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
-            <img src="{% static 'landingpage/img/profile-img.jpg' %}" class="img-fluid" alt="">
+            <img src="{% static 'landingpage/img/aman-profile-img.jpg' %}" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Software Developer.</h3>
