--- a/landingpage/templates/landingpage/index.html
+++ b/landingpage/templates/landingpage/index.html
@@ -151,7 +151,7 @@
 
         <div class="section-title">
           <h2>Facts</h2>
-          <p>Did 9 Projects counting upto 412+ hours of skill-fully invested time. Accouting for  160+ commits on github and 2 Blog Post ( Available on Desv.to and blog.amangoyal.ml ).</p>
+          <p>Did 9 Projects counting upto 412+ hours of skill-fully invested time. Accouting for  160+ commits on github and 2 Blog Post ( Available on Dev.to and blog.amangoyal.ml ).</p>
         </div>
 
         <div class="row no-gutters">
