addd github link in left section

--- a/landingpage/templates/landingpage/index.html
+++ b/landingpage/templates/landingpage/index.html
@@ -65,6 +65,7 @@
           <a href="https://blog.amangoyal.ml/" class="devto">
             <iconify-icon data-icon="cib-hashnode"></iconify-icon></i>
           </a>
+          <a href="https://github.com/goyal-aman" class="bx-bxl-github"><i class="bx bxl-github"></i></a>
         </div>
       </div>
 
