updated title and written content

--- a/timeline/templates/timeline/card_list_view.html
+++ b/timeline/templates/timeline/card_list_view.html
@@ -86,33 +86,18 @@
 
     <main id="main">
 
-        <!-- ======= Breadcrumbs ======= -->
-        <section class="breadcrumbs">
-            <div class="container">
-
-                <div class="d-flex justify-content-between align-items-center">
-                    <h2>Inner Page</h2>
-                    <ol>
-                        <li><a href="index.html">Home</a></li>
-                        <li>Inner Page</li>
-                    </ol>
-                </div>
-
-            </div>
-        </section><!-- End Breadcrumbs -->
-
         <section class="inner-page">
             <div class="container">
+
+                <div class="section-title">
+                    <h2>Timline</h2>
+                    <p>Track record of my minor and major professional achievements.</p>
+                </div>
+          
+
                 <!--new additions above-->
 
                 <!-- partial:index.partial.html -->
-                <div class="title">
-                    <h2>Timeline</h2>
-                    <p>
-                    <h6>Track record of my minor and major professional achievements.</h6>
-                    </p>
-                </div>
-                <hr>
                 <div class="timeline">
                     <div class="container">
                         <div class="row">
