--- a/landingpage/templates/landingpage/base.html
+++ b/landingpage/templates/landingpage/base.html
@@ -77,11 +77,11 @@
                 <ul>
                     <li class="active"><a href="{% url 'home'  %}#main"><i class="bx bx-home"></i> <span>Home</span></a>
                     </li>
-                    <li><a href="#about"><i class="bx bx-user"></i> <span>About</span></a></li>
-                    <li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
+                    <li><a href="{% url 'home' %}#about"><i class="bx bx-user"></i> <span>About</span></a></li>
+                    <li><a href="{% url 'home' %}#resume"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
                     <li><a href="{% url 'timeline-home' %}"><i class="bx bx-book-content"></i> Timeline</a></li>
                     <!-- <li><a href="#services"><i class="bx bx-server"></i> Services</a></li> -->
-                    <li><a href="#contact"><i class="bx bx-envelope"></i> Contact</a></li>
+                    <li><a href="{% url 'home' %}#contact"><i class="bx bx-envelope"></i> Contact</a></li>
 
                 </ul>
             </nav><!-- .nav-menu -->
