hero section has white bg now

--- a/landingpage/static/landingpage/css/style.css
+++ b/landingpage/static/landingpage/css/style.css
@@ -216,7 +216,7 @@ h1, h2, h3, h4, h5, h6 {
 
 #hero:before {
   content: "";
-  background: rgba(5, 13, 24, 0.3);
+  background: rgba(0, 0, 0, 0);
   position: absolute;
   bottom: 0;
   top: 0;
@@ -233,24 +233,23 @@ h1, h2, h3, h4, h5, h6 {
 
 #hero h1 {
   margin: 0 0 10px 0;
-  font-size: 64px;
-  font-weight: 700;
+  font-size: 110px;
+  font-weight: 1000;
   line-height: 56px;
-  color: #fff;
 }
 
 #hero p {
-  color: #fff;
+  /* color: #fff; */
   margin-bottom: 50px;
   font-size: 26px;
   font-family: "Poppins", sans-serif;
 }
 
 #hero p span {
-  color: #fff;
+  /* color: #fff; */
   padding-bottom: 4px;
   letter-spacing: 1px;
-  border-bottom: 3px solid #149ddd;
+  border-bottom: 3px solid #000608;
 }
 
 @media (min-width: 1024px) {
