--- a/landingpage/templates/landingpage/index.html
+++ b/landingpage/templates/landingpage/index.html
@@ -4,7 +4,7 @@
 {% block content %}
   <!-- ======= Hero Section ======= -->
   <main id="main">
-    <section id="hero" class="d-flex flex-column justify-content-center align-items-center" style="background-image: url('{% static 'landingpage/img/hero-bg-aman-trimmed.jpg' %}') ;">
+    <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
       <div class="hero-container" data-aos="fade-in">
         <h1>Aman Goyal</h1>
         <p>I'm <span class="typed" data-typed-items="Developer, Developer, Engineer, Student"></span></p>
