--- a/landingpage/templates/landingpage/base.html
+++ b/landingpage/templates/landingpage/base.html
@@ -12,6 +12,7 @@
 
     <!--icons-->
     <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
+    <script src="https://kit.fontawesome.com/da103a00e4.js" crossorigin="anonymous"></script>
 
     <!-- Favicons -->
     <link rel="apple-touch-icon" sizes="180x180" href="{% static 'landingpage/favicon/apple-touch-icon.png' %}">
