--- a/landingpage/templates/landingpage/index.html
+++ b/landingpage/templates/landingpage/index.html
@@ -9,6 +9,15 @@
         <h1>Aman Goyal</h1>
         <p>I'm <span class="typed" data-typed-items="Developer, Developer, Engineer, Student"></span></p>
       </div>
+
+      <div class="social-icons">
+        <a class="social-icon" href="https://www.linkedin.com/in/ln-amangoyal/"><i
+                class="fab fa-linkedin-in"></i></a>
+        <a class="social-icon" href="https://github.com/goyal-aman"><i class="fab fa-github"></i></a>
+        <a class="social-icon" href="https://twitter.com/_goyalaman"><i class="fab fa-twitter"></i></a>
+        <a class="social-icon" href="https://dev.to/goyalaman"><i class="fab fa-dev"></i></a>
+      </div>
+
     </section><!-- End Hero -->
 
     <!-- ======= About Section ======= -->
