added hashnode link to hero section

--- a/landingpage/templates/landingpage/index.html
+++ b/landingpage/templates/landingpage/index.html
@@ -16,6 +16,7 @@
         <a class="social-icon" href="https://github.com/goyal-aman"><i class="fab fa-github"></i></a>
         <a class="social-icon" href="https://twitter.com/_goyalaman"><i class="fab fa-twitter"></i></a>
         <a class="social-icon" href="https://dev.to/goyalaman"><i class="fab fa-dev"></i></a>
+        <a class="social-icon" href="https://blog.amangoyal.ml/"><iconify-icon data-icon="cib-hashnode"></iconify-icon></a>
       </div>
 
     </section><!-- End Hero -->
