added profile image to left section

--- a/landingpage/templates/landingpage/base.html
+++ b/landingpage/templates/landingpage/base.html
@@ -57,7 +57,7 @@
         <div class="d-flex flex-column">
 
             <div class="profile">
-                <img src="{% static 'landing/img/profile-img.jpg' %}" alt="" class="img-fluid rounded-circle">
+                <img src="{% static 'landingpage/img/aman-prof-square-image.jpg' %}" alt="" class="img-fluid rounded-circle">
                 <h1 class="text-light"><a href="{% url 'home' %}#main">Aman Goyal</a></h1>
                 <div class="social-links mt-3 text-center">
                     <a href="https://twitter.com/_goyalaman" class="twitter"><i class="bx bxl-twitter"></i></a>
