added fade in animation to social icons

--- a/landingpage/templates/landingpage/index.html
+++ b/landingpage/templates/landingpage/index.html
@@ -10,7 +10,7 @@
         <p>I'm <span class="typed" data-typed-items="Developer, Developer, Engineer, Student"></span></p>
       </div>
 
-      <div class="social-icons">
+      <div class="social-icons" data-aos="fade-in">
         <a class="social-icon" href="https://www.linkedin.com/in/ln-amangoyal/"><i
                 class="fab fa-linkedin-in"></i></a>
         <a class="social-icon" href="https://github.com/goyal-aman"><i class="fab fa-github"></i></a>
