changed animations to fade-in

--- a/landingpage/templates/landingpage/index.html
+++ b/landingpage/templates/landingpage/index.html
@@ -35,10 +35,10 @@
         </div>
 
         <div class="row">
-          <div class="col-lg-4" data-aos="fade-right">
+          <div class="col-lg-4" data-aos="fade-in">
             <img src="{% static 'landingpage/img/aman-profile-img.jpg' %}" class="img-fluid" alt="">
           </div>
-          <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
+          <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-in">
             <h3>Software Developer.</h3>
             <p class="font-italic">
               I'm pre final year engineering student. Self taught Software Developer. I post and share content related
@@ -143,7 +143,7 @@
         </div>
 
         <div class="row">
-          <div class="col-lg-6" data-aos="fade-up">
+          <div class="col-lg-6" data-aos="fade-in">
             <h3 class="resume-title">Sumary</h3>
             <div class="resume-item pb-0">
               <h4>Aman Goyal</h4>
@@ -167,7 +167,7 @@
               </ul>
             </div>
           </div>
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+          <div class="col-lg-6" data-aos="fade-in" data-aos-delay="0">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
               <h4>Python Django Developer</h4>
@@ -202,7 +202,7 @@
 
         <div class="row skills-content">
 
-          <div class="col-lg-6" data-aos="fade-up">
+          <div class="col-lg-6" data-aos="fade-in">
 
             <div class="progress">
               <span class="skill">Python <i class="val">90%</i></span>
@@ -229,7 +229,7 @@
             </div>
           </div>
 
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+          <div class="col-lg-6" data-aos="fade-in" data-aos-delay="0">
 
             <div class="progress">
               <span class="skill">Java <i class="val">70%</i></span>
