--- a/landingpage/templates/landingpage/index.html
+++ b/landingpage/templates/landingpage/index.html
@@ -35,10 +35,10 @@
         </div>
 
         <div class="row">
-          <div class="col-lg-4" data-aos="fade-in">
+          <div class="mobile-hide col-md-4 col-lg-4" data-aos="fade-in">
             <img src="{% static 'landingpage/img/aman-profile-img.jpg' %}" class="img-fluid" alt="">
           </div>
-          <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-in">
+          <div class="col-xl-12 col-lg-8 col-md-8 pt-4 pt-lg-0 content" data-aos="fade-in">
             <h3>Software Developer.</h3>
             <p class="font-italic">
               I'm pre final year engineering student. Self taught Software Developer. I post and share content related
