--- a/landingpage/templates/landingpage/index.html
+++ b/landingpage/templates/landingpage/index.html
@@ -22,7 +22,7 @@
     </section><!-- End Hero -->
 
     <!-- ======= About Section ======= -->
-    <section id="about" class="about">
+    <section id="about" class="about"data-aos="fade-in">
       <div class="container">
 
         <div class="section-title">
