Revert "Landingpage new style"

--- a/landingpage/templates/landingpage/index.html
+++ b/landingpage/templates/landingpage/index.html
@@ -4,25 +4,15 @@
 {% block content %}
   <!-- ======= Hero Section ======= -->
   <main id="main">
-    <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
+    <section id="hero" class="d-flex flex-column justify-content-center align-items-center" style="background-image: url('{% static 'landingpage/img/hero-bg-aman-trimmed.jpg' %}') ;">
       <div class="hero-container" data-aos="fade-in">
         <h1>Aman Goyal</h1>
         <p>I'm <span class="typed" data-typed-items="Developer, Developer, Engineer, Student"></span></p>
       </div>
-
-      <div class="social-icons" data-aos="fade-in">
-        <a class="social-icon" href="https://www.linkedin.com/in/ln-amangoyal/"><i
-                class="fab fa-linkedin-in"></i></a>
-        <a class="social-icon" href="https://github.com/goyal-aman"><i class="fab fa-github"></i></a>
-        <a class="social-icon" href="https://twitter.com/_goyalaman"><i class="fab fa-twitter"></i></a>
-        <a class="social-icon" href="https://dev.to/goyalaman"><i class="fab fa-dev"></i></a>
-        <a class="social-icon" href="https://blog.amangoyal.ml/"><iconify-icon data-icon="cib-hashnode"></iconify-icon></a>
-      </div>
-
     </section><!-- End Hero -->
 
     <!-- ======= About Section ======= -->
-    <section id="about" class="about"data-aos="fade-in">
+    <section id="about" class="about">
       <div class="container">
 
         <div class="section-title">
@@ -35,10 +25,10 @@
         </div>
 
         <div class="row">
-          <div class="mobile-hide col-md-4 col-lg-4" data-aos="fade-in">
+          <div class="col-lg-4" data-aos="fade-right">
             <img src="{% static 'landingpage/img/aman-profile-img.jpg' %}" class="img-fluid" alt="">
           </div>
-          <div class="col-xl-12 col-lg-8 col-md-8 pt-4 pt-lg-0 content" data-aos="fade-in">
+          <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Software Developer.</h3>
             <p class="font-italic">
               I'm pre final year engineering student. Self taught Software Developer. I post and share content related
@@ -143,7 +133,7 @@
         </div>
 
         <div class="row">
-          <div class="col-lg-6" data-aos="fade-in">
+          <div class="col-lg-6" data-aos="fade-up">
             <h3 class="resume-title">Sumary</h3>
             <div class="resume-item pb-0">
               <h4>Aman Goyal</h4>
@@ -167,7 +157,7 @@
               </ul>
             </div>
           </div>
-          <div class="col-lg-6" data-aos="fade-in" data-aos-delay="0">
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
               <h4>Python Django Developer</h4>
@@ -202,7 +192,7 @@
 
         <div class="row skills-content">
 
-          <div class="col-lg-6" data-aos="fade-in">
+          <div class="col-lg-6" data-aos="fade-up">
 
             <div class="progress">
               <span class="skill">Python <i class="val">90%</i></span>
@@ -229,7 +219,7 @@
             </div>
           </div>
 
-          <div class="col-lg-6" data-aos="fade-in" data-aos-delay="0">
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
 
             <div class="progress">
               <span class="skill">Java <i class="val">70%</i></span>
