--- a/landingpage/static/landingpage/css/style.css
+++ b/landingpage/static/landingpage/css/style.css
@@ -74,14 +74,10 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #header .profile img {
-  /* margin: 15px auto; */
+  margin: 15px auto;
   display: block;
-  /* width: 120px; */
-  /* border: 8px solid #2c2f3f; */
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
+  width: 120px;
+  border: 8px solid #2c2f3f;
 }
 
 #header .profile h1 {
@@ -220,8 +216,12 @@ h1, h2, h3, h4, h5, h6 {
 
 #hero:before {
   content: "";
-  background: rgba(0, 0, 0, 0);
+  background: rgba(5, 13, 24, 0.3);
   position: absolute;
+  bottom: 0;
+  top: 0;
+  left: 0;
+  right: 0;
   z-index: 1;
 }
 
@@ -233,23 +233,24 @@ h1, h2, h3, h4, h5, h6 {
 
 #hero h1 {
   margin: 0 0 10px 0;
-  font-size: 110px;
-  font-weight: 1000;
+  font-size: 64px;
+  font-weight: 700;
   line-height: 56px;
+  color: #fff;
 }
 
 #hero p {
-  /* color: #fff; */
+  color: #fff;
   margin-bottom: 50px;
   font-size: 26px;
   font-family: "Poppins", sans-serif;
 }
 
 #hero p span {
-  /* color: #fff; */
+  color: #fff;
   padding-bottom: 4px;
   letter-spacing: 1px;
-  border-bottom: 3px solid #000608;
+  border-bottom: 3px solid #149ddd;
 }
 
 @media (min-width: 1024px) {
@@ -259,10 +260,9 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 @media (max-width: 768px) {
-  /* aman goyal text for small windows*/
   #hero h1 {
-    font-size: 60px;
-    line-height: 50px;
+    font-size: 28px;
+    line-height: 36px;
   }
   #hero h2 {
     font-size: 18px;
@@ -780,7 +780,7 @@ section {
 }
 
 .contact .info .social-links {
-  padding-left: 50px;
+  padding-left: 60px;
 }
 
 .contact .info .social-links a {
@@ -1078,36 +1078,4 @@ section {
     width: auto;
     padding-right: 20px 15px;
   }
-}
-
-.social-icons .social-icon {
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  height: 2.5rem;
-  width: 2.5rem;
-  background-color: #495057;
-  color: #fff;
-  border-radius: 100%;
-  font-size: 1.5rem;
-  margin-right: 1.5rem;
-}
-
-.social-icons .social-icon:last-child {
-  margin-right: 0;
-}
-
-.social-icons .social-icon:hover {
-  background-color: #149ddd;
-}
-
-/* to hide profile image in about section in desktop */
-@media screen and (min-width: 1200px) {
-
-  /* USE THESE CLASSES TO HIDE CONTENT ON MOBILE */
- .mobile-hide {
-    display: none !important;
-    align-items: center;
- }
-
 }
