--- a/landingpage/templates/landingpage/index.html
+++ b/landingpage/templates/landingpage/index.html
@@ -73,12 +73,12 @@
       </div>
     </section><!-- End About Section -->
 
-    <!-- ======= Facts Section ======= -->
-    <section id="facts" class="facts">
+    <!-- ======= Stats Section ======= -->
+    <section id="stats" class="stats">
       <div class="container">
 
         <div class="section-title">
-          <h2>Facts</h2>
+          <h2>Stats</h2>
           <p>Did 9 Projects counting upto 412+ hours of skill-fully invested time. Accouting for  160+ commits on github and 2 Blog Post ( Available on Dev.to and blog.amangoyal.ml ).</p>
         </div>
 
