--- a/landingpage/templates/landingpage/base.html
+++ b/landingpage/templates/landingpage/base.html
@@ -79,7 +79,7 @@
                     <li class="active"><a href="{% url 'home'  %}#main"><i class="bx bx-home"></i> <span>Home</span></a>
                     </li>
                     <li><a href="{% url 'home' %}#about"><i class="bx bx-user"></i> <span>About</span></a></li>
-                    <li><a href="{% url 'home' %}#facts"><i class="bx bx-stats"></i> <span>Facts</span></a></li>
+                    <li><a href="{% url 'home' %}#stats"><i class="bx bx-stats"></i> <span>Stats</span></a></li>
                     <li><a href="{% url 'home' %}#resume"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
                     <li><a href="{% url 'home' %}#skills"><i class="bx bx-bulb"></i> <span>Skills</span></a></li>
                     <!-- <li><a href="#services"><i class="bx bx-server"></i> Services</a></li> -->
