--- a/landingpage/templates/landingpage/index.html
+++ b/landingpage/templates/landingpage/index.html
@@ -79,7 +79,7 @@
 
         <div class="section-title">
           <h2>Stats</h2>
-          <p>Did 9 Projects counting upto 412+ hours of skill-fully invested time. Accouting for  160+ commits on github and 2 Blog Post ( Available on Dev.to and blog.amangoyal.ml ).</p>
+          <p>Did 9 Projects counting to 412+ hours of skill-fully invested time since March 2020. Accouting for 200+ commits on github and 3 Blog Post ( Available on Dev.to and blog.amangoyal.ml ).</p>
         </div>
 
         <div class="row no-gutters">
@@ -88,7 +88,7 @@
             <div class="count-box">
               <i class="icofont-simple-smile"></i>
               <span data-toggle="counter-up">
-                <p>160</p>
+                <p>200</p>
               </span>
               <p><strong>Commits</strong> on gitub</p>
             </div>
@@ -105,7 +105,7 @@
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="count-box">
               <i class="icofont-blogger"></i>
-              <span data-toggle="counter-up">2</span>
+              <span data-toggle="counter-up">3</span>
               <p><strong>Blog Post,</strong> available on hashnode, dev.to, medium</p>
             </div>
           </div>
