minor tweaks : typos, removed social icons on left pane

--- a/landingpage/templates/landingpage/base.html
+++ b/landingpage/templates/landingpage/base.html
@@ -60,17 +60,16 @@
                 <img src="{% static 'landingpage/img/aman-prof-square-image.jpg' %}" alt="" class="img-fluid rounded-circle">
                 <h1 class="text-light"><a href="{% url 'home' %}#main">Aman Goyal</a></h1>
                 <div class="social-links mt-3 text-center">
-                    <a href="https://twitter.com/_goyalaman" class="twitter"><i class="bx bxl-twitter"></i></a>
+                    <!-- <a href="https://twitter.com/_goyalaman" class="twitter"><i class="bx bxl-twitter"></i></a> -->
                     <!-- <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a> -->
                     <!-- <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a> -->
                     <!-- <a href="{% url 'timeline-home' %}" class="google-plus"><i class="bx bxl-skype"></i></a> -->
-                    <a href="https://www.linkedin.com/in/ln-amangoyal/" class="linkedin"><i
-                            class="bx bxl-linkedin"></i></a>
-                    <a href="https://dev.to/goyalaman" class="devto"><i class="bx bxl-dev-to"></i></a>
-                    <a href="https://blog.amangoyal.ml/" class="devto">
-                        <iconify-icon data-icon="cib-hashnode"></iconify-icon></i>
-                    </a>
-                    <a href="https://github.com/goyal-aman" class="bx-bxl-github"><i class="bx bxl-github"></i></a>
+                    <!-- <a href="https://www.linkedin.com/in/ln-amangoyal/" class="linkedin"><i class="bx bxl-linkedin"></i></a> -->
+                    <!-- <a href="https://dev.to/goyalaman" class="devto"><i class="bx bxl-dev-to"></i></a> -->
+                    <!-- <a href="https://blog.amangoyal.ml/" class="devto"> -->
+                        <!-- <iconify-icon data-icon="cib-hashnode"></iconify-icon></i> -->
+                    <!-- </a> -->
+                    <!-- <a href="https://github.com/goyal-aman" class="bx-bxl-github"><i class="bx bxl-github"></i></a> -->
                 </div>
             </div>
 
