--- a/landingpage/templates/landingpage/index.html
+++ b/landingpage/templates/landingpage/index.html
@@ -57,7 +57,7 @@
                 <ul>
                   <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 21</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> Bachelor's (Persuing)</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>PhEmailone:</strong> amangoyal8110@gmail.com</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> amangoyal8110@gmail.com</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Freelance:</strong> Available</li>
                 </ul>
               </div>
@@ -88,7 +88,7 @@
             <div class="count-box">
               <i class="icofont-simple-smile"></i>
               <span data-toggle="counter-up">
-                <p>200</p>
+                <p>247</p>
               </span>
               <p><strong>Commits</strong> on gitub</p>
             </div>
@@ -144,7 +144,7 @@
 
         <div class="row">
           <div class="col-lg-6" data-aos="fade-in">
-            <h3 class="resume-title">Sumary</h3>
+            <h3 class="resume-title">Summary</h3>
             <div class="resume-item pb-0">
               <h4>Aman Goyal</h4>
               <p><em>Innovative and deadline-driven experience of developing client oriented products from initial
