fixed typo in resume section

--- a/landingpage/templates/landingpage/index.html
+++ b/landingpage/templates/landingpage/index.html
@@ -171,7 +171,7 @@
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
               <h4>Python Django Developer</h4>
-              <h5>May 2019 - Nov Present</h5>
+              <h5>May 202020 - Nov 2020</h5>
               <p><em>Hackveda, Delhi, Delhi </em></p>
               <ul>
                 <li>Developed backend systems and API's through consistent hard work and dedication to organization.
