--- a/landingpage/templates/landingpage/index.html
+++ b/landingpage/templates/landingpage/index.html
@@ -27,10 +27,10 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Enthusiastic Software Developer eager to
-            contribute to team success through hard work,
-            attention to detail and excellent organizational
-            skills. Proven skills in leadership. 
+          <p>
+            Fresher with in-depth knowledge of languages and development tools. 
+            I am skilled at working and collaborating with teams. Looking to start the career
+            in an entry-level position to prove my abilities. 
           </p>
         </div>
 
