added projects models

--- a/landingpage/templates/landingpage/index.html
+++ b/landingpage/templates/landingpage/index.html
@@ -266,7 +266,7 @@
   </section><!-- End Skills Section -->
 
   <!-- ======= Portfolio Section ======= -->
-  <!-- <section id="portfolio" class="portfolio section-bg">
+   <section id="portfolio" class="portfolio section-bg">
       <div class="container">
 
         <div class="section-title">
@@ -296,7 +296,7 @@
               <div class="portfolio-links">
                 <a href="{% static 'landingpage/img/portfolio/portfolio-1.jpg' %}" data-gall="portfolioGallery"
                   class="venobox" title="App 1"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="/portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -392,7 +392,7 @@
         </div>
 
       </div>
-    </section> -->
+    </section>
   <!-- End Portfolio Section -->
 
   <!-- ======= Services Section ======= -->
