fix : removed incomplete project section

--- a/landingpage/templates/landingpage/index.html
+++ b/landingpage/templates/landingpage/index.html
@@ -276,7 +276,10 @@
   </section><!-- End Skills Section -->
 
   <!-- ======= Portfolio Section ======= -->
-   <section id="portfolio" class="portfolio section-bg">
+  <!--
+    
+  <!--
+  <section id="portfolio" class="portfolio section-bg">
       <div class="container">
 
         <div class="section-title">
@@ -402,7 +405,7 @@
         </div>
 
       </div>
-    </section>
+    </section> -->
   <!-- End Portfolio Section -->
 
   <!-- ======= Services Section ======= -->
